check fix bug on mobile

--- a/css/adapt.css
+++ b/css/adapt.css
@@ -91,7 +91,7 @@
     }
 
     .header_menu-burger.active {
-        overflow-x: auto;
+        overflow-x: scroll;
     }
 
     .header_menu-bottom {
